k8s-configs/ping-cloud/base/pingaccess/base/statefulset.yaml
# This defines the pingaccess admin deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-admin
  labels:
    cluster: pingaccess-cluster
    role: pingaccess-admin
spec:
  selector:
    matchLabels:
      role: pingaccess-admin
  replicas: 1
  serviceName: pingaccess-admin
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-admin
      labels:
        cluster: pingaccess-cluster
        role: pingaccess-admin
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingaccess-admin
        image: pingidentity/pingaccess:2006.1-6.1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
          limits:
            memory: "4Gi"
            cpu: "2"
        volumeMounts:
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /usr/local/bin/skbn
          subPath: skbn
        - name: data-dir
          mountPath: /git-ask-pass.sh
          subPath: git-ask-pass.sh
        - name: out-dir
          mountPath: /opt/out
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/85-pa-admin-readiness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-admin-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        ports:
        - containerPort: 9000
        - containerPort: 9090
      volumes:
      - name: data-dir
        emptyDir: {}
      - name: pingaccess-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: out-dir
        persistentVolumeClaim:
          claimName: out-dir
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
  volumeClaimTemplates:
  - metadata:
      name: out-dir
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: pingaccess-gp2
      resources:
        requests:
          storage: 20Gi

---

# This defines the pingaccess engine deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess
  labels:
    cluster: pingaccess-cluster
    role: pingaccess-engine
spec:
  selector:
    matchLabels:
      role: pingaccess-engine
  serviceName: pingaccess
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-engine
      labels:
        cluster: pingaccess-cluster
        role: pingaccess-engine
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each PA runtime pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: role
                      operator: In
                      values:
                        - pingaccess-engine
                topologyKey: "failure-domain.beta.kubernetes.io/zone"
      containers:
      - name: pingaccess
        image: pingidentity/pingaccess:2006.1-6.1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - name: topology-descriptor
          mountPath: /opt/staging/topology/descriptor.json
          subPath: descriptor.json
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /usr/local/bin/skbn
          subPath: skbn
        - name: data-dir
          mountPath: /git-ask-pass.sh
          subPath: git-ask-pass.sh
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 4
          timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/staging/hooks/86-pre-stop.sh
        ports:
        - containerPort: 3000
        - containerPort: 3030
      volumes:
      - name: data-dir
        emptyDir: {}
      - name: pingaccess-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: topology-descriptor
        configMap:
          name: topology-descriptor
          optional: true
          defaultMode: 0644
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
