k8s-configs/ping-cloud/base/pingaccess/base/service.yaml
# This service exposes the pingaccess admin, runtime ports to the cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess-admin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pingaccess-cluster-dev.ping-demo.com
spec:
  clusterIP: None
  ports:
  - port: 9000
    name: pingaccess-admin
  - port: 9090
    name: pingaccess-cluster
  - port: 8079
    name: pa-heartbeat
  selector:
    role: pingaccess-admin

---

# This service exposes the pingaccess runtime engine and agent ports within cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess
spec:
  ports:
    - port: 443
      name: pingaccess-engine
      targetPort: 3000
    - port: 3030
      name: pingaccess-agent
    - port: 8080
      name: metrics
  selector:
    role: pingaccess-engine
