k8s-configs/ping-cloud/base/pingaccess/base/ingress.yaml
# This defines the ingress for the pingaccess runtime service

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingaccess-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
    Include /etc/nginx/owasp-modsecurity-crs/nginx-modsecurity.conf
    SecRequestBodyAccess On
    SecAuditEngine RelevantOnly
    SecAuditLogParts ABIJDEFHZ
    SecAuditLog /dev/stdout

spec:
  tls:
  - hosts:
    - pingaccess-dev.ping-demo.com
  rules:
  - host: pingaccess-dev.ping-demo.com
    http:
      paths:
      # This rule gives external access to the pingaccess runtime service
      - path: /
        backend:
          serviceName: pingaccess
          servicePort: 443

---

# This defines the ingress for the pingaccess agent services.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingaccess-agent-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules : "true"

spec:
  tls:
  - hosts:
    - pingaccess-agent-dev.ping-demo.com
  rules:
  - host: pingaccess-agent-dev.ping-demo.com
    http:
      paths:
      # This rule gives external access to the pingaccess agent port
      - path: /
        backend:
          serviceName: pingaccess
          servicePort: 3030

---

# todo remove me
# This defines the ingress for the pingaccess admin service

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingaccess-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-private
    # Possible fix for some 502 failures on admin assets and api requests.
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  tls:
    - hosts:
        - pingaccess-admin-dev.ping-demo.com
  rules:
    - host: pingaccess-admin-dev.ping-demo.com
      http:
        paths:
          # This rule gives internal access to the pingaccess admin services.
          - path: /
            backend:
              serviceName: pingaccess-admin
              servicePort: 9000
